2.0.8
	+ Added Greek language
2.0.7
	+ Added compMessage field to EBox::Event
	+ Bugfix: actionCell parameters are now passed correctly
2.0.6
	+ Added link to download software.log in unexpected error page
2.0.5
	+ Removed error message on file tests
	+ Workaround for POST params validation with webkit based browsers
	+ Added support for printableActionName in DataTable's
	+ Better behaviour of read-only rows with up/down arrows
	+ Add missing semicolon to HTML entities
2.0.4
	+ Aesthetic improvement in modal boxes
	+ Bugfix: Escape ' and " as HTML entities in gettext to fix
	  problems with the dashboard in some languages
	+ Fixed error when trying to read an undefined configkey
2.0.3
	+ Validation of domain names using Data::Validate::Domain
	+ Added Bengali language
	+ Added Simplified Chinese to language selection
	+ Added two icons for ebox-software
2.0.2
	+ Fixed a backward compatibility issue when checking if a network
	  interface is up
2.0.1
	+ Use sysfs to retrieve network interfaces information
	+ Added permanent messages to composite viewer
	+ Bugfix: Show permanent messages and message below page title if
	  the model has pageTitle property
	+ Added Lithuanian language
	+ Added Romanian to the language selection
1.5.10
	+ Improved reload icon
	+ Remove duplicated action in EBox::Sudo::_root
	+ Added bps and millisecond types to format monitor graphs
1.5.9
	+ Zentyal rebranding
	+ Added web page favicon
	+ Add new methods __s and __sx for official strings for
	  subscriptions
	+ Give support for HTML::Mason exceptions in error page
1.5.8
	+ Added Ukranian locale (uk_UA)
	+ Added missing CIDR values between /16 and /8
	+ New function orderRow(field, order) added to table_order.js
	+ Fixed problem with icons in tableorderer header
1.5.7
	+ New method for escaping strings in mason, fixes problems with non-latin
	  encodings
	+ Redis as configuration backend (instead of gconf)
	+ Bug fix: Error in table_orderer search and order
1.5.6