@@ -1,3 +1,5 @@
+HEAD
+	+ Added getFreePort method to EBox::NetWrappers
 2.0.8
 	+ Added Greek language
 2.0.7
